# RK2

./: CMakeLists.txt
.github/workflows/: conf.yml
Decorator/: tests.cpp
